<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLoginPrimary"
    tools:context="com.example.hautc.chmessage.LoginActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="138dp"
        android:text="@string/tvUsername"
        android:textColor="@color/textColorAccent"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edt_UserName_dlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        android:layout_marginRight="15dp"
        android:textColorHint="@color/textColorAccent"
        android:drawableLeft="@drawable/ic_person_orange_24dp"
        android:drawablePadding="2dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_UserName_dlg"
        android:layout_below="@+id/edt_UserName_dlg"
        android:layout_marginTop="15dp"
        android:text="@string/tvPassword"
        android:textColor="@color/textColorAccent"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edt_Password_dlg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_marginRight="15dp"
        android:textColorHint="@color/textColorAccent"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="2dp"
        android:drawableRight="@drawable/ic_remove_red_eye_orange_24dp" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/btnLogin"
        android:layout_below="@+id/edt_Password_dlg"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_shape"
        android:textColor="@color/buttonTextColor"/>

    <TextView
        android:id="@+id/tv_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/tv_SignUp"
        android:textColor="@color/textColorAccent"
        android:clickable="true"
        />

    <ImageView
        android:id="@+id/imageView_dlg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/edt_UserName_dlg"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/logo3" />


</RelativeLayout>
